--- a/hotels.html
+++ b/hotels.html
@@ -67,8 +67,8 @@
     }
     .modal-header h3{font-size:2.2rem;margin-bottom:10px;}
     .modal-body{flex-grow:1;display:flex;flex-direction:column;}
-    .modal-swiper{height:500px;}
-    .modal-swiper .swiper-slide img{width:100%;height:100%;object-fit:cover;}
+    .modal-swiper{height:500px;background:#000;}
+    .modal-swiper .swiper-slide img{width:100%;height:100%;object-fit:contain;background:#000;}
     .modal-info{padding:30px;text-align:center;background:rgba(255,255,255,0.95);}
     .modal-info p{font-size:1.2rem;line-height:1.7;margin-bottom:20px;}
     .close-modal{
@@ -94,9 +94,9 @@
   <h2>Лучшие отели и апартаменты южного берега 2025</h2>
   <div class="grid">
 
-    <!-- Карточка Ton Marina — клик открывает модалку -->
+    <!-- Карточка Ton Marina -->
     <div class="hotel-card" onclick="openModal()">
-      <img src="images/ton-marina/Ton-Marina-1.jpg" alt="Ton Marina Apart-Hotel" loading="lazy">
+      <img src="https://raw.githubusercontent.com/issykkul-kg/TravelKyrgyzstan/main/images/ton-marina/Ton-Marina-1.jpg" alt="Ton Marina Apart-Hotel" loading="lazy">
       <div class="info">
         <h3>Ton Marina Apart-Hotel</h3>
         <p>Село Тон • Современные апартаменты с кухней<br>Собственный пирс • Прямой вид на озеро</p>
@@ -105,7 +105,7 @@
       </div>
     </div>
 
-    <!-- Пример другой карточки -->
+    <!-- Другие отели -->
     <div class="hotel-card">
       <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/10/5f/21/3c/bel-tam-seaside-yurt.jpg?w=700&h=-1&s=1" alt="Bel Tam Seaside Yurt Camp">
       <div class="info">
@@ -116,12 +116,10 @@
       </div>
     </div>
 
-    <!-- Добавляй сюда другие отели -->
-
   </div>
 </div>
 
-<!-- МОДАЛЬНОЕ ОКНО Ton Marina с 28 фото -->
+<!-- МОДАЛЬНОЕ ОКНО с 28 фото -->
 <div class="modal" id="tonMarinaModal">
   <div class="close-modal" onclick="closeModal()">×</div>
   <div class="modal-content">
@@ -132,34 +130,34 @@
     <div class="modal-body">
       <div class="swiper modal-swiper mySwiper">
         <div class="swiper-wrapper">
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-1.jpg" alt="1" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-2.jpg" alt="2" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-3.jpg" alt="3" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-4.jpg" alt="4" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-5.jpg" alt="5" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-6.jpg" alt="6" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-7.jpg" alt="7" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-8.jpg" alt="8" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-9.jpg" alt="9" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-10.jpg" alt="10" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-11.jpg" alt="11" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-12.jpg" alt="12" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-13.jpg" alt="13" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-14.jpg" alt="14" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-15.jpg" alt="15" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-16.jpg" alt="16" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-17.jpg" alt="17" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-18.jpg" alt="18" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-19.jpg" alt="19" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-20.jpg" alt="20" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-21.jpg" alt="21" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-22.jpg" alt="22" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-23.jpg" alt="23" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-24.jpg" alt="24" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-25.jpg" alt="25" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-26.jpg" alt="26" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-27.jpg" alt="27" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-28.jpg" alt="28" loading="lazy"></div>
+          <div class="swiper-slide"><img src="https://raw.githubusercontent.com/issykkul-kg/TravelKyrgyzstan/main/images/ton-marina/Ton-Marina-1.jpg" alt="1" loading="lazy"></div>
+          <div class="swiper-slide"><img src="https://raw.githubusercontent.com/issykkul-kg/TravelKyrgyzstan/main/images/ton-marina/Ton-Marina-2.jpg" alt="2" loading="lazy"></div>
+          <div class="swiper-slide"><img src="https://raw.githubusercontent.com/issykkul-kg/TravelKyrgyzstan/main/images/ton-marina/Ton-Marina-3.jpg" alt="3" loading="lazy"></div>
+          <div class="swiper-slide"><img src="https://raw.githubusercontent.com/issykkul-kg/TravelKyrgyzstan/main/images/ton-marina/Ton-Marina-4.jpg" alt="4" loading="lazy"></div>
+          <div class="swiper-slide"><img src="https://raw.githubusercontent.com/issykkul-kg/TravelKyrgyzstan/main/images/ton-marina/Ton-Marina-5.jpg" alt="5" loading="lazy"></div>
+          <div class="swiper-slide"><img src="https://raw.githubusercontent.com/issykkul-kg/TravelKyrgyzstan/main/images/ton-marina/Ton-Marina-6.jpg" alt="6" loading="lazy"></div>
+          <div class="swiper-slide"><img src="https://raw.githubusercontent.com/issykkul-kg/TravelKyrgyzstan/main/images/ton-marina/Ton-Marina-7.jpg" alt="7" loading="lazy"></div>
+          <div class="swiper-slide"><img src="https://raw.githubusercontent.com/issykkul-kg/TravelKyrgyzstan/main/images/ton-marina/Ton-Marina-8.jpg" alt="8" loading="lazy"></div>
+          <div class="swiper-slide"><img src="https://raw.githubusercontent.com/issykkul-kg/TravelKyrgyzstan/main/images/ton-marina/Ton-Marina-9.jpg" alt="9" loading="lazy"></div>
+          <div class="swiper-slide"><img src="https://raw.githubusercontent.com/issykkul-kg/TravelKyrgyzstan/main/images/ton-marina/Ton-Marina-10.jpg" alt="10" loading="lazy"></div>
+          <div class="swiper-slide"><img src="https://raw.githubusercontent.com/issykkul-kg/TravelKyrgyzstan/main/images/ton-marina/Ton-Marina-11.jpg" alt="11" loading="lazy"></div>
+          <div class="swiper-slide"><img src="https://raw.githubusercontent.com/issykkul-kg/TravelKyrgyzstan/main/images/ton-marina/Ton-Marina-12.jpg" alt="12" loading="lazy"></div>
+          <div class="swiper-slide"><img src="https://raw.githubusercontent.com/issykkul-kg/TravelKyrgyzstan/main/images/ton-marina/Ton-Marina-13.jpg" alt="13" loading="lazy"></div>
+          <div class="swiper-slide"><img src="https://raw.githubusercontent.com/issykkul-kg/TravelKyrgyzstan/main/images/ton-marina/Ton-Marina-14.jpg" alt="14" loading="lazy"></div>
+          <div class="swiper-slide"><img src="https://raw.githubusercontent.com/issykkul-kg/TravelKyrgyzstan/main/images/ton-marina/Ton-Marina-15.jpg" alt="15" loading="lazy"></div>
+          <div class="swiper-slide"><img src="https://raw.githubusercontent.com/issykkul-kg/TravelKyrgyzstan/main/images/ton-marina/Ton-Marina-16.jpg" alt="16" loading="lazy"></div>
+          <div class="swiper-slide"><img src="https://raw.githubusercontent.com/issykkul-kg/TravelKyrgyzstan/main/images/ton-marina/Ton-Marina-17.jpg" alt="17" loading="lazy"></div>
+          <div class="swiper-slide"><img src="https://raw.githubusercontent.com/issykkul-kg/TravelKyrgyzstan/main/images/ton-marina/Ton-Marina-18.jpg" alt="18" loading="lazy"></div>
+          <div class="swiper-slide"><img src="https://raw.githubusercontent.com/issykkul-kg/TravelKyrgyzstan/main/images/ton-marina/Ton-Marina-19.jpg" alt="19" loading="lazy"></div>
+          <div class="swiper-slide"><img src="https://raw.githubusercontent.com/issykkul-kg/TravelKyrgyzstan/main/images/ton-marina/Ton-Marina-20.jpg" alt="20" loading="lazy"></div>
+          <div class="swiper-slide"><img src="https://raw.githubusercontent.com/issykkul-kg/TravelKyrgyzstan/main/images/ton-marina/Ton-Marina-21.jpg" alt="21" loading="lazy"></div>
+          <div class="swiper-slide"><img src="https://raw.githubusercontent.com/issykkul-kg/TravelKyrgyzstan/main/images/ton-marina/Ton-Marina-22.jpg" alt="22" loading="lazy"></div>
+          <div class="swiper-slide"><img src="https://raw.githubusercontent.com/issykkul-kg/TravelKyrgyzstan/main/images/ton-marina/Ton-Marina-23.jpg" alt="23" loading="lazy"></div>
+          <div class="swiper-slide"><img src="https://raw.githubusercontent.com/issykkul-kg/TravelKyrgyzstan/main/images/ton-marina/Ton-Marina-24.jpg" alt="24" loading="lazy"></div>
+          <div class="swiper-slide"><img src="https://raw.githubusercontent.com/issykkul-kg/TravelKyrgyzstan/main/images/ton-marina/Ton-Marina-25.jpg" alt="25" loading="lazy"></div>
+          <div class="swiper-slide"><img src="https://raw.githubusercontent.com/issykkul-kg/TravelKyrgyzstan/main/images/ton-marina/Ton-Marina-26.jpg" alt="26" loading="lazy"></div>
+          <div class="swiper-slide"><img src="https://raw.githubusercontent.com/issykkul-kg/TravelKyrgyzstan/main/images/ton-marina/Ton-Marina-27.jpg" alt="27" loading="lazy"></div>
+          <div class="swiper-slide"><img src="https://raw.githubusercontent.com/issykkul-kg/TravelKyrgyzstan/main/images/ton-marina/Ton-Marina-28.jpg" alt="28" loading="lazy"></div>
         </div>
         <div class="swiper-pagination"></div>
       </div>
@@ -180,7 +178,7 @@
   +996 709 100 020 · +996 702 703 456
 </footer>
 
-<!-- Swiper JS (ОБЯЗАТЕЛЬНО!) -->
+<!-- Swiper JS -->
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 <script>
   let modalSwiper;
@@ -199,7 +197,6 @@
   function closeModal() {
     document.getElementById('tonMarinaModal').classList.remove('active');
   }
-  // Закрытие по клику вне окна
   document.getElementById('tonMarinaModal').addEventListener('click', function(e) {
     if (e.target === this) closeModal();
   });
